[ES6] Arrow function syntax. Update syntax error text 'super is only valid inside functions' to more suitable https://bugs.webkit.org/show_bug.cgi?id=155491

Reviewed by Saam Barati.

Source/JavaScriptCore:

Current message 'super is only valid inside of funcitons' is not correct
after patch for https://bugs.webkit.org/show_bug.cgi?id=153864 because
it is allow to use 'super' in eval. Current patch replace old message by
'Super is only valid inside functions or 'eval' inside a function' and
fix tests that rely on this message.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseMemberExpression):
* tests/stress/generator-with-super.js:
(shouldThrow):
* tests/stress/modules-syntax-error.js:
* tests/stress/super-in-lexical-scope.js:
* tests/stress/tagged-templates-syntax.js:

LayoutTests:

* js/class-syntax-super-expected.txt:
* js/script-tests/class-syntax-super.js:
* sputnik/Conformance/07_Lexical_Conventions/7.5_Tokens/7.5.3_Future_Reserved_Words/S7.5.3_A1.27-expected.txt:

Canonical link: https://commits.webkit.org/173800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198472 268f45cc-cd09-0410-ab3c-d52691b4dbfc